--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,9 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="socket.io/socket.io.js"></script>
+    <!-- <script type="text/javascript" src="socket.io/socket.io.js"></script> -->
+    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
+
     <script type="text/javascript" src="./code.js"></script>
 </body>
 </html>
