--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,12 @@
     <!-- <script type="text/javascript" src="socket.io/socket.io.js"></script> -->
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
 
-    <script type="text/javascript" src="./code.js"></script>
+   <!-- Charger le script Socket.IO depuis un CDN (ou votre propre serveur) -->
+<script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
+<script type="text/javascript">
+    const socket = io('https://gossip-ebon.vercel.app');  // Remplacez par l'URL correcte du serveur
+</script>
+<script src="./code.js"></script>
+
 </body>
 </html>
