--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
 
    <!-- Charger le script Socket.IO depuis un CDN (ou votre propre serveur) -->
 <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     const socket = io('https://gossip-ebon.vercel.app');  // Remplacez par l'URL correcte du serveur
-</script>
+</script> -->
 <script src="./code.js"></script>
 
 </body>
